tests/language_modules/11_errors_results/valid/error_declaration.vf
module ErrorDeclaration

error NotFound

procedure main()
is
    check true
end main

end ErrorDeclaration