tests/language_modules/11_errors_results/invalid_semantics/duplicate_error_name.vf
module DuplicateErrorName

error NotFound
error NotFound

end DuplicateErrorName